@@ -11,6 +11,7 @@ Common.ClockControlPanel.Play     =Play
 Common.ClockControlPanel.Pause    =Pause
 Common.ClockControlPanel.Step     =Step
 Common.ClockControlPanel.Restart  =Restart
+Common.ClockControlPanel.Rewind  =Rewind
 Common.record=REC
 Common.rewind=Rewind
 Common.slow.motion=Slow
